--- a/css/media.css
+++ b/css/media.css
@@ -1,8 +1,8 @@
-@media screen and (max-width:375px) and (max-height:667px) {
+@media screen and (min-width:375px) {
     /* Redefino alguns tamanhos para se adequar a tela de celulares */
 
     header{
-        height: 50px;
+        height: 60px;
     }
     
     h1 {
