--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:375px) {
+@media screen and (min-width:375px) and (max-width:425px) {
     /* Redefino alguns tamanhos para se adequar a tela de celulares */
 
     header{
